rajout de 'const'

--- a/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
+++ b/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Parseur.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="TestCMatrice.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cexception.cpp">
@@ -42,6 +45,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Matrice.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TestCMatrice.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
