--- a/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
+++ b/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="TestCMatrice.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="TableauAssociatif.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cexception.cpp">
@@ -48,6 +51,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="TestCMatrice.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TableauAssociatif.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
