--- a/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj
+++ b/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj
@@ -146,16 +146,21 @@
     <ClInclude Include="constantes.h" />
     <ClInclude Include="helpers.h" />
     <ClInclude Include="Matrice.h" />
+    <ClInclude Include="OperationMatrice.h" />
     <ClInclude Include="Parseur.h" />
     <ClInclude Include="TableauAssociatif.h" />
+    <ClInclude Include="TesteurMatrice.h" />
     <ClInclude Include="TestsUnitaires.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cexception.cpp" />
     <ClCompile Include="helpers.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Matrice.cpp" />
+    <ClCompile Include="OperationMatrice.cpp" />
     <ClCompile Include="Parseur.cpp" />
     <ClCompile Include="TableauAssociatif.cpp" />
+    <ClCompile Include="TesteurMatrice.cpp" />
     <ClCompile Include="TestsUnitaires.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
