--- a/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
+++ b/ProjetMatrices/ProjetMatrices/ProjetMatrices.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="TestsUnitaires.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="OperationMatrice.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="TesteurMatrice.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cexception.cpp">
@@ -54,6 +60,15 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="TestsUnitaires.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="OperationMatrice.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TesteurMatrice.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Matrice.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
